# ssh-agent-setup

./: .gitignore  README.md  Rakefile  pyproject.toml  setup.py
.github/workflows/: publish.yaml  tests.yaml
ssh_agent_setup/: __init__.py  parse_agent_variables.py
tests/: test_parse_agent_variables.py
