[tool.poetry]
name = "ssh-agent-setup"
version = "2.0.0"
description = "set up a working ssh-agent and add keys for any subprocesses you want to run"
authors = ["Yoav Kleinberger <haarcuba@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
